k8s/coma/apps/media/lidarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - lidarr.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
        backendRequest: 120s
      backendRefs:
        - name: lidarr-main
          port: 8686
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-similar
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - lidarr-similar.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
        backendRequest: 120s
      backendRefs:
        - name: lidarr-lidarr-similar
          port: 8000
